tests/ui/issues/issue-28433.rs
enum Bird {
    pub Duck,
    //~^ ERROR visibility qualifiers are not permitted here
    Goose,
    pub(crate) Dove
    //~^ ERROR visibility qualifiers are not permitted here
}


fn main() {
    let y = Bird::Goose;
}
